Added setting to change lifetime of weather data cache.

--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,5 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,python
 
 docs/
+releases/
+Pipfile*
